add build script for windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,10 @@
 cmake_minimum_required(VERSION 3.0)
 project("open-pysics-library")
 
-option(BUILD_SHARED_LIBS             "pl: build shared libs" OFF)
-option(PL_JAVA                       "sd: build java bindings" OFF)
+option(BUILD_SHARED_LIBS             "openpl: build shared libs" OFF)
+option(PL_JAVA                       "openpl: build java bindings" OFF)
+
+add_subdirectory(bullet)
 
 if(PL_JAVA)
     set(PL_SOURCES_EXTRAS java-bindings/wrapper.cpp)
@@ -13,9 +15,9 @@ if(PL_JAVA)
     set(BUILD_SHARED_LIBS ON)
 endif()
 
-set(PL_LIB openpl)
-
 include_directories(src bullet ${PL_HEADER_EXTRAS})
+
+set(PL_LIB openpl)
 
 add_library(${PL_LIB} src/PL/BulletContext.cpp src/PL/pl.cpp src/PL/pl10.h ${PL_SOURCES_EXTRAS})
 
@@ -29,8 +31,6 @@ if(BUILD_SHARED_LIBS)
 else()
     message("Build static library")
 endif()
-
-add_subdirectory(bullet)
 
 target_link_libraries(${PL_LIB} PUBLIC bullet-lib)
 target_compile_features(${PL_LIB} PUBLIC cxx_std_11)
